Closed Bug 417910 Opened 18 years ago Closed 18 years ago

Save As panel doesn't remember last saving format

Categories

(Core :: Widget: Cocoa, defect, P2)

PowerPC
macOS
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: dominik, Assigned: jaas)

References

Details

(Keywords: regression)

Attachments

(1 file, 3 obsolete files)

User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.4; en-US; rv:1.9b3) Gecko/2008020511 Firefox/3.0b3 Build Identifier: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.4; en-US; rv:1.9b3) Gecko/2008020511 Firefox/3.0b3 Since version 3, the saving format selector is not set to last selection. Reproducible: Always Steps to Reproduce: 1. Open the "Save As" panel on a random page. 2. Change the format to "Web Page, HTML only" 3. Save the page 4. Open the "Save As" panel. Actual Results: The format selector is set on "Web Page, complete" Expected Results: The format should be set on "Web Page, HTML only" I'm using firefox 3.0b3.
Version: unspecified → Trunk
Confirming - I see this using Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9b4pre) Gecko/2008021604 Minefield/3.0b4pre. I checked Firefox 2.0.0.12 and it does default to the last selection that you made.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Assignee: nobody → joshmoz
Component: Form Manager → Widget: Cocoa
Product: Firefox → Core
QA Contact: form.manager → cocoa
Flags: blocking1.9?
this seems to a be a regression since Firefox 2, since its also broken in the Alpha 1 -> Beta 3 Versions of Firefox 3.
Keywords: regression
Flags: blocking1.9? → blocking1.9+
Priority: -- → P2
Attached patch fix v1.0 (obsolete) — Splinter Review
This should work at least as well as our carbon impl did.
Attachment #306166 - Flags: review?(stuart.morgan)
We can also just kill off the "sCurrentProcessSignature" variable, it isn't used.
Comment on attachment 306166 [details] [diff] [review] fix v1.0 r=smorgan >+#define FILE_TYPE_NATIVE_PREF @"GeckoFilePickerFormatIndex" Why a #define, rather than a |static NSString* const|?
Attachment #306166 - Flags: review?(stuart.morgan) → review+
Attached patch fix v1.1 (obsolete) — Splinter Review
Attachment #306166 - Attachment is obsolete: true
Attachment #306174 - Flags: superreview?(roc)
so if someone created two filepickers, opened one and waited for it to close, then opened the other and waited for it to close, then asked for the filter index of the first one, they could get the wrong value? I.e., shouldn't we keep a per-filepicker filterIndex as well as store it in prefs?
Attached patch fix v2.0 (obsolete) — Splinter Review
Uses gecko prefs only to init the index value for each instance, saves out to prefs whenever an index is used. There is a bunch of comment cleanup in this patch, sorry but that style was driving me nuts and it didn't match the rest of cocoa widgets.
Attachment #306174 - Attachment is obsolete: true
Attachment #306193 - Flags: superreview?(roc)
Attachment #306174 - Flags: superreview?(roc)
Attached patch fix v2.1Splinter Review
Forgot a sanity check.
Attachment #306193 - Attachment is obsolete: true
Attachment #306317 - Flags: superreview?(roc)
Attachment #306193 - Flags: superreview?(roc)
Comment on attachment 306317 [details] [diff] [review] fix v2.1 +const char* kLastTypeIndexPref = "filepicker.lastTypeIndex"; Infintesimally more efficient to write "const char kLastTypeIndexPref[] = ..."
Attachment #306317 - Flags: superreview?(roc) → superreview+
Comment on attachment 306317 [details] [diff] [review] fix v2.1 This is low risk, reward is it fixes a blocker :) Doesn't necessarily need to make a beta, it would just be nice.
Attachment #306317 - Flags: approval1.9b4?
Comment on attachment 306317 [details] [diff] [review] fix v2.1 a1.9b4=beltzner
Attachment #306317 - Flags: approval1.9b4? → approval1.9b4+
landed on trunk
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
verified fixed using Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9b4pre) Gecko/2008022904 Minefield/3.0b4pre.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: