make filepicker remember last type selected. b=417910 r=smorgan sr=roc a=beltzner